# hyperliquidmaster

./: .gitignore  BEST_BRANCH.md  CHANGELOG.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCED_FEATURES_COMPLETE.md  LICENSE  PRIVATE_KEY_SETUP_GUIDE.md  PRODUCTION_READY_REPORT.md  PROJECT_COMPLETION_REPORT.md  README.md  README_GUI.md  README_TESTING.md  README_UPDATES.md  REPOSITORY_CLEANUP_REPORT.md  ULTIMATE_BLENDED_COMPLETION.md  ULTIMATE_COMPLETION_REPORT.md  analysis_and_recommendations.md  api_endpoint_handlers.py  api_integration.py  api_rate_limiter.py  architecture.md  architecture_and_strategy_roadmap.md  autonomous_trading_test.py  autonomous_trading_test_results.json  backtest_trainer.py  bot_state.json  btc_eth_data_resolver.py  comprehensive_test.py  comprehensive_test_results.json  config.json  config_compatibility.py  data_acquisition_monitor.py  data_collector.py  data_quality_analysis.json  data_quality_summary.json  data_source_resolver.py  debug_exchange_order.py  enhanced_historical_data_accumulator.py  (+112 more)
backtest_data/: BTC-USD-PERP_1h.csv  BTC-USD-PERP_4h.csv  ETH-USD-PERP_1h.csv  ETH-USD-PERP_4h.csv  SOL-USD-PERP_1h.csv  SOL-USD-PERP_4h.csv
backtest_results/: BTC_1h_2023-01-01_2023-12-31.csv  ETH_1h_2023-01-01_2023-12-31.csv  SOL_1h_2023-01-01_2023-12-31.csv  master_omni_overlord_strategy_BTC-USD-PERP-ETH-USD-PERP-SOL-USD-PERP_1h_20250523_173037.json  master_omni_overlord_strategy_BTC-USD-PERP-ETH-USD-PERP-SOL-USD-PERP_1h_20250523_173103.json  (+724 more)
backtesting/: backtest_engine.py
config/: config.yaml  rate_limiter_state.json  (+2 more)
(+264 files in other folders)
